third_party/rust/chromium_crates_io/vendor/zerocopy-derive-0.7.35/tests/ui-nightly/late_compile_pass.stderr
warning: unused import: `zerocopy::KnownLayout`
  --> tests/ui-nightly/late_compile_pass.rs:16:5
   |
16 | use zerocopy::KnownLayout;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:28:10
   |
28 | #[derive(FromZeroes)]
   |          ^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeroes`:
             ()
             *const T
             *mut T
             AU16
             F32<O>
             F64<O>
             FromZeroes1
             I128<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeroes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:37:10
   |
37 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             FromBytes1
             I128<O>
             I16<O>
             I32<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `FromBytes1: FromZeroes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:37:10
   |
37 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeroes` is not implemented for `FromBytes1`
   |
   = help: the following other types implement trait `FromZeroes`:
             ()
             *const T
             *mut T
             AU16
             F32<O>
             F64<O>
             FromZeroes1
             I128<O>
           and $N others
note: required by a bound in `FromBytes`
  --> $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeroes {
   |                             ^^^^^^^^^^ required by this bound in `FromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:46:10
   |
46 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             AsBytes1
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:56:10
   |
56 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:64:10
   |
64 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:71:10
   |
71 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
9  + #![feature(trivial_bounds)]
   |
